# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  bzero.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_libft.h  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_tolowwer.c  ft_toupper.c  libft.h  memchr.c  memcmp.c  memcpy.c  memset.c  strdup.c  strlcat.c  (+2 more)
